# fabscript-php

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
Fabscript/: Makefile.am  api.php  block.php  break_continue.php  code_creator.php  container.php  edit_section.php  edit_section_parser.php  environment.php  expression.php  interpreter.php  io.php  logical_expression.php  parser.php  preprocessor.php  snippet.php
grammar/: Makefile.am  fabscript.bovg  genparser.sh  license.txt
m4/: Makefile.am  bovinus_check.m4  bovinus_check.sh
unit-test/: Makefile.am  codegentest.php  gentest.php  items.template  mitarbeiter.template  modeltest.php  object.template  parsertest.php
