EXTRA_DIST = \
	api.php \
	block.php  \
	break_continue.php \
	code_creator.php \
	container.php \
	edit_section.php \
	edit_section_parser.php \
	environment.php \
	expression.php \
	interpreter.php \
	io.php \
	logical_expression.php \
	parser.php \
	preprocessor.php \
	snippet.php

fabscriptdir = $(prefix)/Fabscript
fabscript_DATA = $(EXTRA_DIST)
